--- a/style.css
+++ b/style.css
@@ -83,13 +83,13 @@ nav h1 {
 }
 
 header section h5 {
-  color: #474747);
+  color: #474747;
   font-size: 35px;
   font-weight: 600;
 }
 
 header section h1 {
-  color: #181818);
+  color: #181818;
   font-size: 65px;
   font-weight: 700;
 }
@@ -245,6 +245,7 @@ textarea {
     flex-direction: column-reverse;
     justify-content: space-around;
     gap: 20px;
+    margin: 0;
   }
 
   .header-content>img {
